Completion of the profile change function (It is possible to change the profile image, but it is necessary to solve the problem of the path visible in the div or img tag after the change)
프로필 변경 기능 완성 (프로필 이미지 변경은 가능하나 변경 이후의 div나 img 태그에서 보이는 경로 문제 해결 필요)

--- a/HowToMakeNatural/src/main/webapp/resources/css/blog/setting.css
+++ b/HowToMakeNatural/src/main/webapp/resources/css/blog/setting.css
@@ -178,8 +178,8 @@
 	border-bottom: 1px solid black;
 }
 #setting_function_panel>article#setting_blog_info>main>div.setting_item>#blog_nickname,
-#setting_function_panel>article#setting_blog_info>main>div.setting_item>#profile_text,
-#setting_function_panel>article#setting_blog_info>main>div.setting_item>#logo_text{
+#setting_function_panel>article#setting_blog_info>main>div.setting_item>#blog_profile_text,
+#setting_function_panel>article#setting_blog_info>main>div.setting_item>#blog_logo_text{
 	width: 70%;
 	height: 50%;
 }
